добавил шарики 3 типов + они взрваються

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,6 +10,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
 </head>
+
 <body>
   <header>
     <div class="phase">
@@ -16,7 +18,7 @@
     </div>
 
     <div>
-      <span class="playerboard" id="playerboard" data-points="0">сбитых ариков</span>
+      <span class="playerboard" id="currentScorePlayer" data-points="0">сбитых ариков</span>
     </div>
     <div>
       Лучший результат: <span class="playerboard" id="topScoreBoard" data-points="0">сбитых шариков</span>
@@ -28,20 +30,31 @@
 
     <button class="startButton">Начать!</button>
 
-    <div class="hole">
+    <div class="field">
       <div class="bubble"></div>
+      <div class="drake"></div>
+      <div class="airplane"></div>
     </div>
-    <div class="hole">
+    <div class="field">
       <div class="bubble"></div>
+      <div class="drake"></div>
+      <div class="airplane"></div>
+
     </div>
-    <div class="hole">
+    <div class="field">
       <div class="bubble"></div>
+      <div class="drake"></div>
+      <div class="airplane"></div>
     </div>
-    <div class="hole">
+    <div class="field">
       <div class="bubble"></div>
+      <div class="drake"></div>
+      <div class="airplane"></div>
     </div>
-    <div class="hole">
+    <div class="field">
       <div class="bubble"></div>
+      <div class="drake"></div>
+      <div class="airplane"></div>
     </div>
   </main>
   <footer>Сбей столько шариков сколько сможешь за 60 секунд!</footer>
