в таком варианте оставлю

--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
       <div class="bubble"></div>
       <div class="drake"></div>
       <div class="airplane"></div>
+
     </div>
   </main>
-  <footer>Сбей столько шариков сколько сможешь за 60 секунд!</footer>
+  <footer> Приготовтесь сейчас вылетит !</footer>
   <script src="game.js"></script>
 </body>
